--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -330,57 +330,52 @@ import { config } from '../config.js';
 			}
 
 			/* FIXED LAYERS (outside wrapper - don't scroll) */
-			/* Layer 1: Background - FIXED */
-			[data-ad="unit-1"] .layer-background {
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				z-index: 1;
-				background-size: cover;
-				background-position: center;
-				background-repeat: no-repeat;
-				pointer-events: none;
-			}
-
-			/* Layer 4: Rocks - FIXED (not used, transparent) */
+			[data-ad="unit-1"] .layer-background,
 			[data-ad="unit-1"] .layer-rocks {
 				position: absolute;
 				width: 100%;
 				height: 100%;
 				top: 0;
 				left: 0;
-				z-index: 4;
-				background: transparent;
 				pointer-events: none;
-			}
-
-			/* MOVING LAYERS (inside wrapper - scroll with parallax) */
-			/* Layer 2: Text */
-			[data-ad="unit-1"] .layer-text {
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				z-index: 2;
-				background-size: contain;
-				background-position: center;
 				background-repeat: no-repeat;
 			}
 
-			/* Layer 3: Car */
+			/* Layer 1: Background - fixed behind */
+			[data-ad="unit-1"] .layer-background {
+				z-index: 1;
+				background-size: cover;
+				background-position: center;
+			}
+
+			/* Layer 4: Rocks - fixed foreground */
+			[data-ad="unit-1"] .layer-rocks {
+				z-index: 4;
+				background-size: contain;
+				background-position: center bottom;
+			}
+
+			/* MOVING LAYERS (inside wrapper - scroll with parallax) */
+			[data-ad="unit-1"] .layer-text,
 			[data-ad="unit-1"] .layer-car {
 				position: absolute;
 				width: 100%;
 				height: 100%;
 				top: 0;
 				left: 0;
-				z-index: 3;
 				background-size: contain;
 				background-position: center;
 				background-repeat: no-repeat;
+				pointer-events: none;
+			}
+
+			/* Layer ordering */
+			[data-ad="unit-1"] .layer-text {
+				z-index: 2;
+			}
+
+			[data-ad="unit-1"] .layer-car {
+				z-index: 3;
 			}
 
 			/* QR Code (Desktop only) */
@@ -527,7 +522,7 @@ import { config } from '../config.js';
 								<div class="layer-text"></div>
 								<div class="layer-car"></div>
 							</div>
-							<!-- Rocks outside too (transparent, not used) -->
+							<!-- Rocks overlay fixed above everything -->
 							<div class="layer-rocks"></div>
 						</div>
 					</div>
