--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -214,6 +214,10 @@ import { config } from '../config.js';
 				padding: 20px;
 			}
 
+			.ad-unit + .content-section {
+				margin-top: 40px;
+			}
+
 			.content-section h2 {
 				font-size: 1.25rem;
 				margin-bottom: 0.75rem;
@@ -331,20 +335,6 @@ import { config } from '../config.js';
 				overflow: hidden;
 			}
 
-			[data-ad="unit-1"] .rock-overlay {
-				position: absolute;
-				left: 50%;
-				bottom: 0;
-				width: clamp(340px, 100%, 420px);
-				height: clamp(140px, 40vw, 200px);
-				transform: translate(-50%, 55%);
-				background-repeat: no-repeat;
-				background-position: center top;
-				background-size: contain;
-				pointer-events: none;
-				z-index: 12;
-			}
-
 			/* Wrapper keeps flexbox for height, but positions children absolutely */
 			[data-ad="unit-1"] .creative-wrapper.parallax-up {
 				position: relative;
@@ -352,8 +342,7 @@ import { config } from '../config.js';
 			}
 
 			/* FIXED LAYERS (outside wrapper - don't scroll) */
-			[data-ad="unit-1"] .layer-background,
-			[data-ad="unit-1"] .layer-rocks {
+			[data-ad="unit-1"] .layer-background {
 				position: absolute;
 				width: 100%;
 				height: 100%;
@@ -370,11 +359,18 @@ import { config } from '../config.js';
 				background-position: center;
 			}
 
-			/* Layer 4: Rocks - fixed foreground */
-			[data-ad="unit-1"] .layer-rocks {
-				z-index: 4;
+			[data-ad="unit-1"] .rock-overlay {
+				position: absolute;
+				left: 50%;
+				bottom: 0;
+				width: clamp(340px, 100%, 420px);
+				height: clamp(140px, 40vw, 200px);
+				transform: translate(-50%, 45%);
+				background-repeat: no-repeat;
+				background-position: center top;
 				background-size: contain;
-				background-position: center bottom;
+				pointer-events: none;
+				z-index: 12;
 			}
 
 			/* MOVING LAYERS (inside wrapper - scroll with parallax) */
@@ -531,7 +527,6 @@ import { config } from '../config.js';
 			adUnit1LayerBackground: config.creatives.adUnit1.layerBackground,
 			adUnit1LayerText: config.creatives.adUnit1.layerText,
 			adUnit1LayerCar: config.creatives.adUnit1.layerCar,
-			adUnit1LayerRocks: config.creatives.adUnit1.layerRocks,
 			adUnit1FloatingRocks: config.creatives.adUnit1.floatingRocks,
 			adUnit2LayerBackground: config.creatives.adUnit2.layerBackground,
 			adUnit2LayerText: config.creatives.adUnit2.layerText,
@@ -555,10 +550,6 @@ import { config } from '../config.js';
 
 			[data-ad="unit-1"] .layer-car {
 				background-image: var(--adUnit1LayerCar);
-			}
-
-			[data-ad="unit-1"] .layer-rocks {
-				background-image: var(--adUnit1LayerRocks);
 			}
 
 			[data-ad="unit-1"] .rock-overlay {
@@ -644,8 +635,6 @@ import { config } from '../config.js';
 								<div class="layer-text"></div>
 								<div class="layer-car"></div>
 							</div>
-							<!-- Rocks overlay fixed above everything -->
-							<div class="layer-rocks"></div>
 						</div>
 						<div class="rock-overlay" aria-hidden="true"></div>
 					</div>
